--- a/docs/Disciplina/Roteiros/__Construção/BD/pysqlite.ipynb
+++ b/docs/Disciplina/Roteiros/__Construção/BD/pysqlite.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
     "\n",
     "# criando a tabela (schema)\n",
     "cursor.execute(\"\"\"\n",
-    "CREATE TABLE clientesss (\n",
+    "CREATE TABLE clientes (\n",
     "        id INTEGER NOT NULL PRIMARY KEY AUTOINCREMENT,\n",
     "        nome TEXT NOT NULL,\n",
     "        idade INTEGER,\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,22 +124,22 @@
     "\n",
     "# inserindo dados na tabela\n",
     "cursor.execute(\"\"\"\n",
-    "INSERT INTO clientesss (nome, idade, cpf, email, fone, cidade, uf, criado_em)\n",
+    "INSERT INTO clientes (nome, idade, cpf, email, fone, cidade, uf, criado_em)\n",
     "VALUES ('Regis', 35, '00000000000', 'regis@email.com', '11-98765-4321', 'Sao Paulo', 'SP', '2014-06-08')\n",
     "\"\"\")\n",
     "\n",
     "cursor.execute(\"\"\"\n",
-    "INSERT INTO clientesss (nome, idade, cpf, email, fone, cidade, uf, criado_em)\n",
+    "INSERT INTO clientes (nome, idade, cpf, email, fone, cidade, uf, criado_em)\n",
     "VALUES ('Aloisio', 87, '11111111111', 'aloisio@email.com', '98765-4322', 'Porto Alegre', 'RS', '2014-06-09')\n",
     "\"\"\")\n",
     "\n",
     "cursor.execute(\"\"\"\n",
-    "INSERT INTO clientesss (nome, idade, cpf, email, fone, cidade, uf, criado_em)\n",
+    "INSERT INTO clientes (nome, idade, cpf, email, fone, cidade, uf, criado_em)\n",
     "VALUES ('Bruna', 21, '22222222222', 'bruna@email.com', '21-98765-4323', 'Rio de Janeiro', 'RJ', '2014-06-09')\n",
     "\"\"\")\n",
     "\n",
     "cursor.execute(\"\"\"\n",
-    "INSERT INTO clientesss (nome, idade, cpf, email, fone, cidade, uf, criado_em)\n",
+    "INSERT INTO clientes (nome, idade, cpf, email, fone, cidade, uf, criado_em)\n",
     "VALUES ('Matheus', 19, '33333333333', 'matheus@email.com', '11-98765-4324', 'Campinas', 'SP', '2014-06-08')\n",
     "\"\"\")\n",
     "\n",
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
     "\n",
     "# lendo os dados\n",
     "cursor.execute(\"\"\"\n",
-    "SELECT * FROM clientesss;\n",
+    "SELECT * FROM clientes;\n",
     "\"\"\")\n",
     "\n",
     "for linha in cursor.fetchall():\n",
@@ -205,13 +205,13 @@
     "conn = sqlite3.connect('clientes.db')\n",
     "cursor = conn.cursor()\n",
     "\n",
-    "id_cliente = 1\n",
-    "novo_fone = '11-1000-2014'\n",
-    "novo_criado_em = '2014-06-11'\n",
+    "id_cliente = 2\n",
+    "novo_fone = '11-1000-2025'\n",
+    "novo_criado_em = '2025-06-11'\n",
     "\n",
     "# alterando os dados da tabela\n",
     "cursor.execute(\"\"\"\n",
-    "UPDATE clientesss\n",
+    "UPDATE clientes\n",
     "SET fone = ?, criado_em = ?\n",
     "WHERE id = ?\n",
     "\"\"\", (novo_fone, novo_criado_em, id_cliente))\n",
@@ -247,7 +247,7 @@
     "\n",
     "# excluindo um registro da tabela\n",
     "cursor.execute(\"\"\"\n",
-    "DELETE FROM clientesss\n",
+    "DELETE FROM clientes\n",
     "WHERE id = ?\n",
     "\"\"\", (id_cliente,))\n",
     "\n",
@@ -374,7 +374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
